# bshpt

./: CMakeLists.txt  README.md  TODO  main.cpp  test.cpp
include/: board.hpp  game.hpp  ship.hpp
sources/: board.cpp  game.cpp  ship.cpp
